--- a/ASP.NET_Shop/appsettings.json
+++ b/ASP.NET_Shop/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=tcp:team-mango-server.database.windows.net,1433;Initial Catalog=TeamMangoTicketShopDb;Persist Security Info=False;User ID=TeamMangoUser;Password=!Q\"w3e¤R;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"DefaultConnection": "Server=tcp:team-mango-server.database.windows.net,1433;Initial Catalog=TeamMangoTicketShopDb;Persist Security Info=False;User ID=TeamMangoUser;Password=!Q2w#E4r;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=test;Trusted_Connection=True"
   }
 
