--- a/TicketShop/appsettings.json
+++ b/TicketShop/appsettings.json
@@ -8,7 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DeployConnection": "Server=tcp:team-mango-server.database.windows.net,1433;Initial Catalog=TeamMangoTicketShopDb;Persist Security Info=False;User ID=TeamMangoUser;Password=!Q2w#E4r;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "DevelopmentConnection": "Server=(localdb)\\MSSQLLocalDB;Database=test;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=test;Trusted_Connection=True;MultipleActiveResultSets=True"
   }
 }
