Changed ConnectionString to Azure SQL String

--- a/TicketShop/appsettings.json
+++ b/TicketShop/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=test;Trusted_Connection=True;MultipleActiveResultSets=True"
+    //"ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=TicketShopDb;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "ConnectionString": "Server=tcp:jv-server.database.windows.net,1433;Initial Catalog=TicketShopDb;Persist Security Info=False;User ID=TeamMango-User;Password=!Q2w#E4r-u87iy;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
